@@ -1,6 +1,7 @@
 """SCons.Tool.latex
 
 Tool-specific initialization for LaTeX.
+Generates .dvi files from .latex or .ltx files
 
 There normally shouldn't be any need to import this module directly.
 It will usually be imported through the generic SCons.Tool.Tool()
@@ -40,10 +41,8 @@ import SCons.Util
 import SCons.Tool
 import SCons.Tool.tex
 
-LaTeXAction = None
-
 def LaTeXAuxFunction(target = None, source= None, env=None):
-    result = SCons.Tool.tex.InternalLaTeXAuxAction( LaTeXAction, target, source, env )
+    result = SCons.Tool.tex.InternalLaTeXAuxAction( SCons.Tool.tex.LaTeXAction, target, source, env )
     if result != 0:
         print env['LATEX']," returned an error, check the log file"
     return result
@@ -53,9 +52,6 @@ LaTeXAuxAction = SCons.Action.Action(LaTeXAuxFunction,
 
 def generate(env):
     """Add Builders and construction variables for LaTeX to an Environment."""
-    global LaTeXAction
-    if LaTeXAction is None:
-        LaTeXAction = SCons.Action.Action('$LATEXCOM', '$LATEXCOMSTR')
 
     env.AppendUnique(LATEXSUFFIXES=SCons.Tool.LaTeXSuffixes)
 
@@ -71,10 +67,7 @@ def generate(env):
     bld.add_emitter('.ltx', SCons.Tool.tex.tex_eps_emitter)
     bld.add_emitter('.latex', SCons.Tool.tex.tex_eps_emitter)
 
-    env['LATEX']        = 'latex'
-    env['LATEXFLAGS']   = SCons.Util.CLVar('-interaction=nonstopmode -recorder')
-    env['LATEXCOM']     = 'cd ${TARGET.dir} && $LATEX $LATEXFLAGS ${SOURCE.file}'
-    env['LATEXRETRIES'] = 3
+    SCons.Tool.tex.generate_common(env)
 
 def exists(env):
     return env.Detect('latex')
