@@ -93,8 +93,16 @@ RELEASE X.X.X - XXX
       Latex output
 
     - Remove LATEXSUFFIXES from environments that don't initialize Tex.
-    
+
     - Add support for the glosaaries package for glossaries and acronyms
+
+    - Fix problem that pdftex, latex, and pdflatex tools by themselves did
+      not create the actions for bibtex, makeindex,... by creating them 
+      and other environment settings in one routine called by all four 
+      tex tools.
+
+    - Fix problem with filenames of sideeffects when the user changes
+      the name of the output file from the latex default
 
 RELEASE 1.2.0.d20090223 - Mon, 23 Feb 2009 08:41:06 -0800
 
